# rust_showcase

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yaml  quick_run.sh  release_run.sh
migrations/2022-09-08-114229_create_customer_order/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/endpoints/: calculation.rs  database.rs  io_operation.rs  mod.rs
